Añado ESF en titulo de Geometria y Radiacion

--- a/diapos/GeometriaSolar.tex
+++ b/diapos/GeometriaSolar.tex
@@ -1,4 +1,4 @@
-% Created 2015-01-14 mié 13:57
+% Created 2015-01-18 dom 09:28
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -36,7 +36,7 @@
 \usefonttheme{serif}
 \author{Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}}
 \date{}
-\title{Geometría Solar}
+\title{Energía Solar Fotovoltaica:\\Geometría Solar}
 \hypersetup{
   pdfkeywords={},
   pdfsubject={},
